force-app/main/default/objects/Trigger_configuration__c/Trigger_configuration__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>For Trigger configuration, to set on/off trigger fire events.</description>
    <label>Trigger Configuration</label>
</CustomObject>