force-app/main/default/objects/Trigger_configuration__c/fields/Account_Team_Members__c.field-meta.xml
<CustomField>
    <fullName>Account_Team_Members__c</fullName>
    <defaultValue>true</defaultValue>
    <description>¿Enabled Account Team Members Triggers?</description>
    <label>Account Team Members</label>
    <type>Checkbox</type>
</CustomField>