force-app/main/default/objects/Trigger_configuration__c/fields/Displays_Marketing_Material__c.field-meta.xml
<CustomField>
    <fullName>Displays_Marketing_Material__c</fullName>
    <defaultValue>true</defaultValue>
    <description>¿Enable Display and Marketing Materials Triggers?</description>
    <label>Displays Marketing Material</label>
    <type>Checkbox</type>
</CustomField>