force-app/main/default/objects/Trigger_configuration__c/fields/Event__c.field-meta.xml
<CustomField>
    <fullName>Event__c</fullName>
    <defaultValue>false</defaultValue>
    <description>¿Enable Event Triggers?</description>
    <label>Event</label>
    <type>Checkbox</type>
</CustomField>