force-app/main/default/objects/Trigger_configuration__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <defaultValue>false</defaultValue>
    <description>¿Enable LeadTriggers?</description>
    <label>Lead</label>
    <type>Checkbox</type>
</CustomField>