force-app/main/default/objects/Trigger_configuration__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <defaultValue>false</defaultValue>
    <description>¿Enable Opportunity Triggers?</description>
    <label>Opportunity</label>
    <type>Checkbox</type>
</CustomField>