force-app/main/default/objects/Trigger_configuration__c/fields/Opportunity_Actor__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Actor__c</fullName>
    <defaultValue>false</defaultValue>
    <description>¿Enable Opportunity Actor Triggers?</description>
    <label>Opportunity Actor</label>
    <type>Checkbox</type>
</CustomField>