force-app/main/default/objects/Trigger_configuration__c/fields/Opportunity_Split__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Split__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Opportunity Split</label>
    <type>Checkbox</type>
</CustomField>