force-app/main/default/objects/Trigger_configuration__c/fields/Opportunity_Team_Member__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Team_Member__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Opportunity Team Member</label>
    <type>Checkbox</type>
</CustomField>