force-app/main/default/objects/Trigger_configuration__c/fields/Opportunity_Team_Members__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Team_Members__c</fullName>
    <defaultValue>true</defaultValue>
    <description>¿Enabled Opportunity Team Members Triggers?</description>
    <label>Opportunity Team Members</label>
    <type>Checkbox</type>
</CustomField>