force-app/main/default/objects/Trigger_configuration__c/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <defaultValue>false</defaultValue>
    <description>¿Enable Order Triggers?</description>
    <label>Order</label>
    <type>Checkbox</type>
</CustomField>