force-app/main/default/objects/Trigger_configuration__c/fields/Sales_Relationship__c.field-meta.xml
<CustomField>
    <fullName>Sales_Relationship__c</fullName>
    <defaultValue>false</defaultValue>
    <description>¿Enable Sales Relationship Triggers?</description>
    <label>Sales Relationship</label>
    <type>Checkbox</type>
</CustomField>