force-app/main/default/objects/Trigger_configuration__c/fields/Task__c.field-meta.xml
<CustomField>
    <fullName>Task__c</fullName>
    <defaultValue>false</defaultValue>
    <description>¿Enable Task Triggers?</description>
    <label>Task</label>
    <type>Checkbox</type>
</CustomField>