force-app/main/default/objects/Trigger_configuration__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <defaultValue>false</defaultValue>
    <description>¿Enable User Triggers?</description>
    <label>User</label>
    <type>Checkbox</type>
</CustomField>